# trajectory_executor

./: .gitignore  README.md  joints.csv  package.xml  setup.cfg  setup.py
launch/: ros_sim_robot.py
scripts/: Inverse_Kinematics.ipynb  sim_server.py  trot_sim.py  wave_generation.ipynb
traj_csv/: standing_traj_v1.csv  standing_traj_v2_100.csv  standing_traj_v2_100_squat.csv  standing_traj_v2_50.csv  standing_traj_v2_50_squat.csv  trajectory.csv
trajectory_executor/: Parameters.py  com_serial.py  com_socket.py  csv_pose_picker.py  csv_to_traj_generator.py  datastructures.py  generator.py  ik_test.py  move_home.py  odrive_test.py  planner.py  quad_walk_generator.py  serial_test.py  simple_traj_generator.py  tracker.py  traj_test.py  traj_to_csv.py  trot.py
trajectory_executor/algos/: foward_wave.py  transition.py  transition_points.csv  trot.py
trajectory_executor/nodes/: foward_wave.py  joints.csv
trajectory_generator/: generator.py  tracker.py
